job_output
  File "main.py", line 11
    Ω = 2.5
    ^
SyntaxError: invalid syntax
